--- a/src/components/styles/Colors.module.css
+++ b/src/components/styles/Colors.module.css
@@ -6,13 +6,12 @@
 
 .color > p {
     width: max-content;
-    border-bottom: 1px solid #eaeaea;
+    border-bottom: 2px solid #eaeaea;
 }
 
 .color .background {
     width: 100%;
     height: 100px;
-    background-color: #ABC38B;
 }
 
 .color .info p {
@@ -41,4 +40,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.add button {
+    background: none;
+    border: none;
 }
